@@ -4,9 +4,9 @@
 
 The core connection structure is ::socket_struct.
 
-The ::init_sockets array, length contained in ::socket_info.allocated_sockets, contains at indice 0 the listening socket for the server, initialized through init_ericserver(). This socket is always in use.
+The ::init_sockets array, length contained in ::socket_info.allocated_sockets, contains at indice 0 the listening socket for the server, initialized through init_server(). This socket is always in use.
 
-When a client connects, a socket from ::init_sockets is reused or reallocated in doeric_server(). During the first connection phase, the client can issue any command in the ::client_commands array - mostly, commands to negociate the connection, request faces and various game-related information -, 'add_me' and 'reply' commands, processed by add_me_cmd() and reply_cmd() respectively.
+When a client connects, a socket from ::init_sockets is reused or reallocated in do_server(). During the first connection phase, the client can issue any command in the ::client_commands array - mostly, commands to negociate the connection, request faces and various game-related information -, 'add_me' and 'reply' commands, processed by add_me_cmd() and reply_cmd() respectively.
 
 When the client sends the 'add_me' command (handled through add_me_cmd()), the socket is copied from the ::init_sockets array to the player.socket field, in add_player(), and the socket in ::init_sockets is marked as reusable.
 
@@ -14,11 +14,11 @@ The function add_player() is responsible from initializing the player structure,
 
 The player then enters the ::ST_GET_NAME mode (as defined in player.state field), to get the name, then password and such.
 
-The main socket handling function is doeric_server(), which is responsible for reading data from sockets, both ::init_sockets and players's, and also accepting new connections. It will also close connection to dropped clients, and check for banned hosts trying to connect.
+The main socket handling function is do_server(), which is responsible for reading data from sockets, both ::init_sockets and players's, and also accepting new connections. It will also close connection to dropped clients, and check for banned hosts trying to connect.
 
 The life-cycle of a connection is thus:
 <ul>
-<li> doeric_server() receives a new connection, and allocates a socket in ::init_sockets
+<li> do_server() receives a new connection, and allocates a socket in ::init_sockets
 <li> handle_client() processes data from the socket, with a pl argument NULL - thus the client can only request information
 <li> the client sends add_me_cmd(). A player structure gets created in add_player(), the new player's mode is set to ::ST_GET_NAME. Socket in ::init_sockets is marked a reusable for future connections
 <li> from now on and until the player is totally logged on, client will mostly reply through reply_cmd() commands
@@ -39,8 +39,8 @@ The main player creation routine is reply_cmd(), one of the few the player can i
 - key_change_class() handles class selection. When completed, player state is set to ::ST_PLAYING, and the player can start actually playing.
 
 Function responsibilities:
-- init_ericserver() initializes the listening server socket, detects closed / in error socket connections and drops them
-- doeric_server() accepts new connections
+- init_server() initializes the listening server socket, detects closed / in error socket connections and drops them
+- do_server() accepts new connections, main socket handling
 - handle_client() lets the client request ingame information, and the players actually play
 - add_me_cmd() instructs the server to setup a player for the client
 - add_player() sets up a new player, and marks the the ::init_sockets socket as reusable after copying it to player.socket
@@ -52,6 +52,6 @@ Function responsibilities:
 - key_change_class() handles class selection
 - play_again() asks the player if she wants to play again when applying a bed of reality or dying
 - receive_play_again() handles the reply
-- leave() marks the player's socket as dead, leaving doeric_server() clean it
+- leave() marks the player's socket as dead, leaving do_server() clean it
 - final_free_player() totally deletes the player structure
 */
